--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,22 @@
-.app-wrapper{
+.app-wrapper {
 
-  width: 1200px;
-  margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto;
 
-  display: grid;
+    display: grid;
 
-  grid-template-areas:
+    grid-template-areas:
   "h h"
   "n c";
 
-  grid-template-rows: 100px 1fr;
-  grid-template-columns: 1fr 5fr;
-  grid-gap: 10px;
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 1fr 5fr;
+    grid-gap: 10px;
 
+}
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color:blueviolet;
 }
 
