--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,8 +1,13 @@
 .posts {
     grid-area: c;
-    background-color:greenyellow;
+    background-color:gold;
+    margin-top: 10px;
 }
 
 .item {
     color: #312a2a;
+}
+
+.postsBlock{
+    padding: 10px;
 }
