--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,14 +1,16 @@
 .nav {
     grid-area: n;
-    background-color: darkgreen;
+    background-color: green;
     padding: 20px;
+    font-family: Apple;
 }
 
 .item a {
     color: white;
     text-decoration: none;
+
 }
 
 .item a.activeLink {
-    color: gold;
+    color: black;
 }
